--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@syncfusion/ej2-angular-schedule": "^17.3.14",
+    "angular-material-event-calendar": "^0.1.4",
+    "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@syncfusion/ej2-material-theme": "~17.3.9"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.2",
